# GLEcpp

./: CMakeLists.txt
examples/: basic.cpp
src/: GLE.cpp  GLE.h
